# Agentic-AI-Analytics

Q7A-chatbot/: README.md  app.py  cloudbuild.yaml  index.html  pyproject.toml
Q7A-chatbot/evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
eval-metrics/: README.md  main.py  pyproject.toml
litellm-web-chat/: README.md  app.py  index.html  pyproject.toml
strunk-white-chat/: README.md  app.py  index.html  pyproject.toml
strunk-white-chat/evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
