[project]
name = "eval-metrics"
version = "0.1.0"
description = "Term overlap, ROUGE, and semantic similarity metrics for evaluating LLM outputs."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "spacy>=3.7",
    "en-core-web-md",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
